--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "socket.io-client": "^4.8.1",
+    "typescript": "^5.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
